--- a/glide.yaml
+++ b/glide.yaml
@@ -1,11 +1,19 @@
-package: .
+package: github.com/Masterminds/glide
+homepage: https://glide.sh
+license: MIT
+owners:
+- name: Matt Butcher
+  email: technosophos@gmail.com
+  homepage: http://technosophos.com/
+- name: Matt Farina
+  email: matt@mattfarina.com
+  homepage: https://www.mattfarina.com/
 import:
-- package: github.com/gin-gonic/gin
-  version: 4cc2de6207f4128624cbdd16be30f64966c67c08
-- package: github.com/gorilla/handlers
-  version: v1.2.1
-- package: github.com/gorilla/mux
-  version: v1.4.0
-- package: gopkg.in/mgo.v2
-  subpackages:
-  - bson
+- package: gopkg.in/yaml.v2
+- package: github.com/Masterminds/vcs
+  version: ^1.11.1
+- package: github.com/codegangsta/cli
+  version: ^1.16.0
+- package: github.com/Masterminds/semver
+  version: ^1.3.0
+- package: github.com/mitchellh/go-homedir
