--- a/glide.yaml
+++ b/glide.yaml
@@ -2,14 +2,13 @@ package: github.com/Masterminds/glide
 homepage: https://glide.sh
 license: MIT
 owners:
-- name: Matt Butcher
-  email: technosophos@gmail.com
-  homepage: http://technosophos.com/
-- name: Matt Farina
-  email: matt@mattfarina.com
-  homepage: https://www.mattfarina.com/
+- name: Buddhi Wathsala 
+  email: b.wathsala.bw@gmail.com
+  homepage: https://groupmiddleware.herokuapp.com:8081/getservice1
+
 import:
 - package: gopkg.in/yaml.v2
+- package: gopkg.in/fmt
 - package: github.com/Masterminds/vcs
   version: ^1.11.1
 - package: github.com/codegangsta/cli
